<resources>
    <!--Menu Principal-->
    <string name="app_name">Gestor de Inventario</string>
    <string name="titulo_principal">Menú Principal</string>
    <string name="boton_productos">Productos</string>
    <string name="boton_marcas">Marcas</string>
    <string name="boton_categorias">Categorias</string>
    <string name="boton_menuPrincipal">Menu Principal</string>

    <!--Lista Productos-->
    <string name="titulo_Productos">Productos</string>
    <string name="boton_productoAgregar">Agregar</string>

    <!--Lista Marcas-->
    <string name="titulo_Marcas">Marcas</string>
    <string name="titulo_AgregarMarca">Agregar Marca</string>
    <string name="nombre_marca">Nombre</string>
    <string name="boton_marcaAgregar">Agregar</string>

    <!--Lista Categorias-->
    <string name="titulo_Categorias">Categorias</string>


    <!--Agregar Producto-->
    <string name="titulo_AgregarProducto">Agregar Producto</string>
    <string name="nombre_producto">Nombre</string>
    <string name="detalles_producto">Detalles</string>
    <string name="cantidad_productos">Cantidad</string>
    <string name="precio_prductos">Precio (MX)</string>
    <string name="marca_producto">Marca</string>
    <string name="categoria_producto">Categoria</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_guardar">Guardar</string>

    <!--Mostrar Detalles-->
    <string name="titulo_detalles">Detalles</string>
    <string name="clave_producto_detalle">Clave</string>
    <string name="boton_eliminar_producto">Eliminar</string>
    <string name="boton_actualizar_producto">Actualizar</string>
</resources>