<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarDetalles">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_detalles"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--<TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/clave_producto_detalle"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@null">

                    <EditText
                        android:id="@+id/claveProducto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="false"
                        android:hint="@string/clave_producto_detalle"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@null">

                    <EditText
                        android:id="@+id/nombreProducto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/nombre_producto"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@null">

                    <EditText
                        android:id="@+id/detallesProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/detalles_producto"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@null">

                    <EditText
                        android:id="@+id/cantidadProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cantidad_productos"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@null">

                    <EditText
                        android:id="@+id/precioProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/precio_prductos"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:singleLine="true"

                        />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/marca_producto"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerMarcas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/categoria_producto"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerCategorias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />


            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space">

            <Button
                android:id="@+id/botonActualizarProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#42b6ad"
                android:onClick="actualizarProducto"
                android:text="@string/boton_actualizar_producto"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/botonCancelarProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E8E3E5"
                android:onClick="cancelarActualizar"
                android:text="@string/boton_cancelar"
                android:textColor="#434343"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/botonActualizarProducto"
                app:layout_constraintStart_toEndOf="@+id/botonEliminarProducto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/botonEliminarProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="#BB2749"
                android:text="@string/boton_eliminar_producto"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>