<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/tituloPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_principal"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.22">

        <Button
            android:id="@+id/boton_productos"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:onClick="irProductos"
            android:text="@string/boton_productos"
            app:layout_constraintBottom_toTopOf="@+id/boton_marcas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/boton_marcas"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:text="@string/boton_marcas"
            app:layout_constraintBottom_toTopOf="@+id/boton_categorias"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/boton_categorias"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:text="@string/boton_categorias"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>